2008-10-10 [paul]	3.6.1

	* m4/spamassassin.m4
		remove openssl dross

	* NEWS
	* README
	* RELEASE_NOTES	
		3.6.1 released!

2008-10-10 [colin]	3.6.0cvs25

	* src/common/ssl.c
		Tell libetpan it doesn't need to init
		GnuTLS

2008-10-10 [colin]	3.6.0cvs24

	* claws-mail.pc.in
		Remove references to openssl

2008-10-09 [colin]	3.6.0cvs23

	* configure.ac
		Fix message

2008-10-09 [colin]	3.6.0cvs22

	* configure.ac
		Error out when building against openssl

2008-10-09 [colin]	3.6.0cvs21

	* configure.ac
	* COPYING
	* src/crash.c
	* src/main.c
	* src/gtk/about.c
		Disable OpenSSL due to requirement of
		OpenSSL exception. Code not removed yet,
		just in case, but disabled.

2008-10-09 [colin]	3.6.0cvs20

	* configure.ac
	* src/Makefile.am
	* src/crash.c
	* src/gedit-print.c
	* src/gedit-print.h
	* src/main.c
	* src/mainwindow.c
	* src/messageview.c
	* src/prefs_ext_prog.c
	* src/prefs_fonts.c
	* src/prefs_image_viewer.c
	* src/printing.c
	* src/printing.h
	* src/summaryview.c
	* src/gtk/Makefile.am
	* src/gtk/about.c
	* src/gtk/gtksourceprintjob.c
	* src/gtk/gtksourceprintjob.h
		Revert previous patch. It'd be better to remove
		OpenSSL instead, as GnuTLS works as well.

2008-10-09 [colin]	3.6.0cvs19

	* configure.ac
	* src/Makefile.am
	* src/crash.c
	* src/gedit-print.c
	* src/gedit-print.h
	* src/main.c
	* src/mainwindow.c
	* src/messageview.c
	* src/prefs_ext_prog.c
	* src/prefs_fonts.c
	* src/prefs_image_viewer.c
	* src/printing.c
	* src/printing.h
	* src/summaryview.c
	* src/gtk/Makefile.am
	* src/gtk/about.c
	* src/gtk/gtksourceprintjob.c
	* src/gtk/gtksourceprintjob.h
		Remove the libgnomeprint interface (deprecated,
		and fixes Debian's #501570, 'Copyright confusion')

2008-10-09 [colin]	3.6.0cvs18

	* configure.ac
		Require libetpan 0.57 (important fixes)

2008-10-08 [paul]	3.6.0cvs17

	* src/prefs_filtering_action.c
	* src/prefs_matcher.c
		enable re-ordering of the filtering/processing
		condition and actions lists by drag'n'drop
