@@ -1,3 +1,9 @@
+2008-10-10 [colin]	3.6.1cvs1
+
+	* src/common/ssl_certificate.c
+	* src/gtk/sslcertwindow.c
+		Fix warnings
+
 2008-10-10 [paul]	3.6.1
 
 	* m4/spamassassin.m4
